# image-gtk

./: Readme.md  meson.build
data/: desktop  meson.build
src/: bar.c  bar.h  icon.c  icon.h  image-app.c  image-app.h  image-win.c  image-win.h  main.c  preview.c  preview.h
